[gd_scene load_steps=3 format=3 uid="uid://bf2fvmala00ue"]

[ext_resource type="Theme" uid="uid://32orfni31l7w" path="res://Themes/cardtheme.tres" id="1_0nfwq"]
[ext_resource type="Script" path="res://Battle/Card.gd" id="1_wcuse"]

[node name="Card" type="Control"]
custom_minimum_size = Vector2(80, 112)
layout_mode = 3
anchor_left = -0.062
anchor_top = -0.156
anchor_right = 0.062
anchor_bottom = 0.156
offset_left = -0.319998
offset_top = 0.160001
offset_right = 0.319998
offset_bottom = -0.160001
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wcuse")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(80, 112)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0nfwq")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CostLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_0nfwq")
text = "1	"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_0nfwq")
text = "t"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DescLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_0nfwq")
theme_override_colors/font_color = Color(0.360784, 0.4, 0.768627, 1)
theme_override_font_sizes/font_size = 8
text = "Deal 6 damage"
horizontal_alignment = 1
